--- a/index.html
+++ b/index.html
@@ -148,8 +148,10 @@
         </h1>
 
         <p class="text-sm md:text-lg text-white/40 max-w-xl font-sans leading-relaxed mb-12 opacity-0 trigger-hero-fade">
-            Синтезированы на основе галловой кислоты и функционализированы имидозолиевыми группами. Разработаны с учетом
-            требований к биосовместимым, настраиваемым и многофункциональным наноматериалам.
+            Мы рады представить вам новую линейку амфифильных дендримеров первой, второй и третьей генерации,
+            синтезированных на основе галловой кислоты и функционализированных имидозолиевыми группами. Данные
+            соединения разработаны с учетом современных требований к биосовместимым, настраиваемым и многофункциональным
+            наноматериалам для биомедицинских и фармакологических применений.
         </p>
 
         <div class="flex flex-wrap gap-6 opacity-0 trigger-hero-fade">
@@ -168,26 +170,26 @@
             <h2 class="reveal-text text-4xl md:text-6xl font-black italic uppercase mb-12 flex flex-wrap">
                 <span>Дизайн</span>&nbsp;<span>молекул</span>
             </h2>
-            <div class="space-y-6 text-white/50 font-sans opacity-0 trigger-fade">
+            <div class="space-y-6 text-white/80 font-sans opacity-0 trigger-fade">
+                <p>
+                    В основе структуры лежит <strong class="text-white">галловая кислота</strong> — природный
+                    полифенольный фрагмент, известный своей
+                    биологической активностью и хорошей биосовместимостью. Разветвлённая дендримерная архитектура
+                    обеспечивает:
+                </p>
                 <p class="border-l-2 border-red-600 pl-6">
-                    <strong class="text-white">Галловая кислота</strong> - природный полифенольный фрагмент, известный
-                    своей биологической активностью и хорошей биосовместимостью.
+                    <strong class="text-white">•</strong> строго контролируемый размер и молекулярную массу <br>
+                    <strong class="text-white">•</strong> высокую плотность функциональных групп на поверхности <br>
+                    <strong class="text-white">•</strong> воспроизводимые физико‑химические свойства <br>
                 </p>
                 <p>
-                    В основе структуры лежит <strong class="text-white">галловая кислота</strong>. Дендримерная
-                    архитектура обеспечивает строго контролируемый размер и высокую плотность
-                    функциональных групп.
+                    Имидозолиевые группы введены в периферию дендримеров и придают молекулам:
                 </p>
-            </div>
-        </div>
-        <div class="grid grid-cols-2 gap-4">
-            <div class="p-8 border border-white/5 bg-white/[0.02] text-center">
-                <div class="text-4xl font-black text-red-600 italic mb-2">G1-G3</div>
-                <div class="text-[8px] uppercase font-bold text-white/20 tracking-widest">Генерации</div>
-            </div>
-            <div class="p-8 border border-white/5 bg-white/[0.02] text-center">
-                <div class="text-4xl font-black text-white italic mb-2">100%</div>
-                <div class="text-[8px] uppercase font-bold text-white/20 tracking-widest">Воспроизводимость</div>
+                <p class="border-l-2 border-red-600 pl-6">
+                    <strong class="text-white">•</strong> положительный заряд <br>
+                    <strong class="text-white">•</strong> амфифильный характер <br>
+                    <strong class="text-white">•</strong> способность к ионным и водородным взаимодействиям <br>
+                </p>
             </div>
         </div>
     </div>
@@ -197,21 +199,32 @@
     <div class="max-w-7xl mx-auto">
         <h2 class="text-4xl md:text-6xl font-black italic uppercase mb-20 text-center">Свойства</h2>
 
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
+        <div class="grid grid-cols-1 md:grid-cols-4 gap-10">
             <div class="hud-card p-10 border border-white/5 bg-[#050505] relative group">
                 <div class="absolute top-0 left-0 w-full h-1 bg-red-600 scale-x-0 group-hover:scale-x-100 transition-transform duration-500"></div>
                 <div class="text-red-600 mb-6 italic font-black text-2xl">01</div>
-                <h3 class="text-xl font-bold uppercase mb-4">Амфифильный характер</h3>
+                <h3 class="text-xl font-bold uppercase mb-4">Способность к самоорганизации с образованием агрегатов
+                    размером 30 нм
+                </h3>
             </div>
             <div class="hud-card p-10 border border-white/5 bg-[#050505] relative group">
                 <div class="absolute top-0 left-0 w-full h-1 bg-red-600 scale-x-0 group-hover:scale-x-100 transition-transform duration-500"></div>
                 <div class="text-red-600 mb-6 italic font-black text-2xl">02</div>
-                <h3 class="text-xl font-bold uppercase mb-4">Положительный заряд</h3>
+                <h3 class="text-xl font-bold uppercase mb-4">Хорошая солюбилизирующая способность гидрофобных субстратов
+                </h3>
             </div>
             <div class="hud-card p-10 border border-white/5 bg-[#050505] relative group">
                 <div class="absolute top-0 left-0 w-full h-1 bg-red-600 scale-x-0 group-hover:scale-x-100 transition-transform duration-500"></div>
                 <div class="text-red-600 mb-6 italic font-black text-2xl">03</div>
-                <h3 class="text-xl font-bold uppercase mb-4">Способность к ионным и водородным взаимодействиям</h3>
+                <h3 class="text-xl font-bold uppercase mb-4">Эффективное связывание с биологическими молекулами (белки,
+                    ДНК)
+                </h3>
+            </div>
+            <div class="hud-card p-10 border border-white/5 bg-[#050505] relative group">
+                <div class="absolute top-0 left-0 w-full h-1 bg-red-600 scale-x-0 group-hover:scale-x-100 transition-transform duration-500"></div>
+                <div class="text-red-600 mb-6 italic font-black text-2xl">04</div>
+                <h3 class="text-xl font-bold uppercase mb-4">Стабилизация наночастиц металлов
+                </h3>
             </div>
         </div>
     </div>
@@ -266,10 +279,11 @@
                     </div>
                 </div>
                 <div class="flex justify-between border-b border-white/5 pb-2">
-                    <p class="mt-8 text-[#949494] text-[12px] leading-relaxed text-white/30 italic">Растворим в спирте, ДМСО, плохо – в
+                    <p class="mt-8 text-[#949494] text-[12px] leading-relaxed text-white/30 italic">Растворим в спирте,
+                        ДМСО, плохо – в
                         воде.</p>
                 </div>
-                <img class="" src="G1 (1).png">
+                <img class="" src="G1-Imd-gal.png">
             </div>
 
             <div class="hud-card p-8 border border-white/10 bg-[#080808] hover:border-red-600 transition-colors">
@@ -293,10 +307,11 @@
                     </div>
                 </div>
                 <div class="flex justify-between border-b border-white/5 pb-2">
-                    <p class="mt-8 text-[#949494] text-[12px] leading-relaxed text-white/30 italic">Растворим в спирте, ДМСО, плохо – в
+                    <p class="mt-8 text-[#949494] text-[12px] leading-relaxed text-white/30 italic">Растворим в спирте,
+                        ДМСО, плохо – в
                         воде.</p>
                 </div>
-                <img class="" src="G2 (1).png">
+                <img class="" src="G2-Imd-gal.png">
             </div>
 
             <div class="hud-card p-8 border border-white/10 bg-[#080808] hover:border-red-600 transition-colors">
@@ -323,7 +338,7 @@
                     <p class="mt-8 text-[12px] leading-relaxed text-red-500 italic font-bold">Хорошо растворим в
                         воде.</p>
                 </div>
-                <img class="" src="G3 (1).png">
+                <img class="" src="G3-Imd-gal.png">
             </div>
         </div>
     </div>
@@ -380,7 +395,7 @@
     });
 
     gsap.to("#rotating-atom", {
-        rotate: 360,
+        rotate: 540,
         scrollTrigger: {
             trigger: "body",
             start: "top top",
